# unitree_ros2

./: README.md  setup.sh
g1_ws/src/g1_control_pkg/: CMakeLists.txt  package.xml
g1_ws/src/g1_control_pkg/description/launch/: view_robot.launch.py
g1_ws/src/g1_control_pkg/launch/: g1.launch.py
g1_ws/src/g1_control_pkg/src/: g1_low_level.cpp
g1_ws/src/g1_control_pkg/src/audio/: g1_audio_client.cpp
